--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.487.0",
     "next": "15.2.0",
     "react": "^19.0.0",
