--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,45 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# === COMMON ===
+.DS_Store
+*.pem
+*.log
+*.tsbuildinfo
+.env
+*.lock
+.log
 
-# dependencies
-/node_modules
-/.pnp
+# === NODE MODULES ===
+node_modules/
+frontend/node_modules/
+backend/node_modules/
+
+# === BUILD OUTPUTS ===
+frontend/.next/
+frontend/out/
+frontend/build/
+backend/dist/
+backend/build/
+
+# === ENV FILES ===
+.env
+frontend/.env
+backend/.env
+
+# === TEST COVERAGE ===
+coverage/
+frontend/coverage/
+backend/coverage/
+
+# === VERCE + DEBUG ===
+.vercel
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# === YARN/PNPM Stuff ===
 .pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-.env
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env*
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
