--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,43 +1,34 @@
 {
-  "name": "doctor-appointment-booking",
+  "name": "doctor-appointment-booking-client",
   "version": "0.1.0",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:next\"",
-    "dev:server": "nodemon src/app/server/index.js",
-    "dev:next": "next dev",
+    "dev": "next dev",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production node src/app/server/index.js",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.487.0",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "concurrently": "^9.1.2",
-    "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
-    "nodemon": "^3.1.10",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
