--- a/backend/config/config.json
+++ b/backend/config/config.json
@@ -1,22 +1,22 @@
 {
   "development": {
-    "username": "root",
-    "password": 1234,
-    "database": "database_development",
+    "username": "postgres",
+    "password": "1234",
+    "database": "doctorAppointments",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "root",
-    "password": 1234,
-    "database": "database_test",
+    "username": "postgres",
+    "password": "1234",
+    "database": "doctorAppointments",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": 1234,
-    "database": "database_production",
+    "username": "postgres",
+    "password": "1234",
+    "database": "doctorAppointments",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
