--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.0",
     "react": "^19.0.0",
