Redirect role pages and Responsive design

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,40 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/Components/ConfirmMessage/ConfirmMessage.jsx",
+    "src/app/Components/DoctorForm/DeleteDocConfirm.jsx",
+    "src/app/Components/DoctorForm/AddDoctorForm.jsx",
+    "src/app/Components/DoctorForm/EditDoctorForm.jsx",
+    "src/app/user/appointments/[doctorSelected]/page.jsx",
+    "src/app/user/dashboard/page.jsx",
+    "src/app/admin/appointmentsmanagement/page.jsx",
+    "src/app/admin/doctorsmanagement/page.jsx",
+    "src/app/page.jsx",
+    "src/app/user/profile/page.jsx",
+    "src/app/redux/adminSlice.js",
+    "src/app/redux/doctorSlice.js",
+    "src/app/redux/userSlice.js",
+    "src/app/redux/store.js",
+    "src/app/lib/api/getDoctors.js",
+    "src/app/Components/ContactsUs/ContactUs.jsx",
+    "src/app/Components/Calendar/Calendar.jsx",
+    "src/app/Components/AppointmentForm/AppointmentForm.jsx",
+    "src/app/doctors/page.jsx",
+    "src/app/Components/DateTimeSelector/DateTimeSelector.jsx",
+    "src/app/Components/DoctorCard/DoctorCard.jsx",
+    "src/app/Components/DoctorsPageClient/DoctorsPageClient.jsx",
+    "src/app/Components/Home/Home.jsx",
+    "src/app/Components/SideBar/SideBar.jsx",
+    "src/app/Components/NavBar/Navbar.jsx",
+    "src/app/layout.jsx",
+    "src/app/user/appointments/page.jsx",
+    "src/app/auth/signin/page.jsx",
+    "src/app/auth/signup/page.jsx"
+  ],
   "exclude": ["node_modules"]
 }
